--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,5 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 14px;
   max-width: 640px;
+  padding: 0 1rem;
 }
