--- a/src/Components/Overview/Overview.css
+++ b/src/Components/Overview/Overview.css
@@ -6,7 +6,8 @@
 .Overview .BarContainer {
   position: relative;
   border-radius: 1rem;
-  background: #ccc;
+  border: 1px solid #ddd;
+  background: #f1f1f1;
   height: 1rem;
   flex: 1 0 auto;
   overflow: hidden;
